openshift/openshift-gitops/olm-catalog/nvidia-gpu-operator/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    name: nvidia-gpu-operator
    openshift.io/cluster-monitoring: "true"
  name: nvidia-gpu-operator
