openshift/openshift-gitops/olm-catalog/nvidia-gpu-operator/04-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "25"
  name: gpu-cluster-policy
  namespace: nvidia-gpu-operator
spec:
  cdi:
    enabled: false
  daemonsets:
    rollingUpdate:
      maxUnavailable: '1'
    updateStrategy: RollingUpdate
  dcgm:
    enabled: true
  dcgmExporter:
    config:
      name: 'metrics-config'
    enabled: true
    env:
      - name: DCGM_EXPORTER_COLLECTORS
        value: "/etc/dcgm-exporter/dcgm-metrics.csv"
    serviceMonitor:
      enabled: true
  devicePlugin:
    config:
      default: ''
      name: ''
    enabled: true
    mps:
      root: /run/nvidia/mps
  driver:
    certConfig:
      name: ''
    enabled: true
    image: driver
    imagePullSecrets: []
    kernelModuleConfig:
      name: ''
    kernelModuleType: proprietary 
    licensingConfig:
      configMapName: ''
      nlsEnabled: true
    rdma:
      enabled: true
      useHostMofed: false
    repoConfig:
      configMapName: ''
    repository: nvcr.io/nvidia
    upgradePolicy:
      autoUpgrade: true
      drain:
        deleteEmptyDir: false
        enable: false
        force: false
        timeoutSeconds: 300
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      podDeletion:
        deleteEmptyDir: false
        force: false
        timeoutSeconds: 300
      waitForCompletion:
        timeoutSeconds: 0
    useOpenKernelModules: false
    useNvidiaDriverCRD: false
    version: 575.57.08
    virtualTopology:
      config: ''
  gdrcopy:
    enabled: true
  gds:
    enabled: false
  gfd:
    enabled: true
  mig:
    strategy: single
  migManager:
    enabled: true
  nodeStatusExporter:
    enabled: true
  operator:
    defaultRuntime: crio
    initContainer: {}
    use_ocp_driver_toolkit: true
  sandboxDevicePlugin:
    enabled: true
  sandboxWorkloads:
    defaultWorkload: container
    enabled: false
  toolkit:
    enabled: true
  validator:
    plugin:
      env: []
  vfioManager:
    enabled: true
  vgpuDeviceManager:
    enabled: true
  vgpuManager:
    enabled: false
